--- a/config/locales/en.bootstrap.yml
+++ b/config/locales/en.bootstrap.yml
@@ -7,7 +7,7 @@ en:
     links:
       back: "Back"
       cancel: "Cancel"
-      confirm: "Are you sure?"
+      confirm: "Are you certain?"
       destroy: "Delete"
       new: "New"
     titles:
